--- a/_config.yml
+++ b/_config.yml
@@ -6,43 +6,43 @@ theme: jekyll-theme-chirpy
 # The language of the webpage › http://www.lingoes.net/en/translator/langcode.htm
 # If it has the same name as one of the files in folder `_data/locales`, the layout language will also be changed,
 # otherwise, the layout language will use the default value of 'en'.
-lang: en
+lang: es
 
 # Change to your timezone › https://zones.arilyn.cc
-timezone:
+timezone: America/Los_Angeles
 
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: Jorge Levy # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the subtitle
+tagline: Blog profesional # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  Desarrollo .Net, Azure, Azure DevOps.
 
 # Fill in the protocol & hostname for your site.
-# E.g. 'https://username.github.io', note that it does not end with a '/'.
-url: ""
+url: "https://jorgelevy.net"
 
 github:
-  username: github_username # change to your GitHub username
+  username: jorgelevy # change to your GitHub username
 
 twitter:
-  username: twitter_username # change to your Twitter username
+  username: JorgeLevyDotNet # change to your Twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: Jorge Levy
+  # email: example@domain.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your Twitter homepage
-    - https://github.com/username # change to your GitHub homepage
-    # Uncomment below to add more social links
-    # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
+    - https://jorgelevy.net
+    - https://bsky.app/profile/jorgelevy.net
+    - https://github.com/jorgelevy
+    - https://www.facebook.com/JorgeLevyDotNet
+    - https://www.linkedin.com/in/jorgelevydotnet/
+    - https://twitter.com/JorgeLevyDotNet
 
 # Site Verification Settings
 webmaster_verifications:
@@ -59,7 +59,7 @@ webmaster_verifications:
 # Web Analytics Settings
 analytics:
   google:
-    id: # fill in your Google Analytics ID
+    id: G-3T2X6Q4XFE
   goatcounter:
     id: # fill in your GoatCounter ID
   umami:
@@ -98,7 +98,7 @@ theme_mode: # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: https://avatars.githubusercontent.com/u/875747
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
@@ -109,7 +109,7 @@ toc: true
 
 comments:
   # Global switch for the post-comment system. Keeping it empty means disabled.
-  provider: # [disqus | utterances | giscus]
+  provider: giscus # [disqus | utterances | giscus]
   # The provider options are as follows:
   disqus:
     shortname: # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
@@ -119,15 +119,15 @@ comments:
     issue_term: # < url | pathname | title | ...>
   # Giscus options › https://giscus.app
   giscus:
-    repo: # <gh-username>/<repo>
-    repo_id:
-    category:
-    category_id:
-    mapping: # optional, default to 'pathname'
-    strict: # optional, default to '0'
-    input_position: # optional, default to 'bottom'
-    lang: # optional, default to the value of `site.lang`
-    reactions_enabled: # optional, default to the value of `1`
+    repo: "jorgelevy/jorgelevy.net"
+    repo_id: "R_kgDONb0Q2w"
+    category: "Comments"
+    category_id: "DIC_kwDONb0Q284ClHcM"
+    mapping: "pathname" # optional, default to 'pathname'
+    strict: " 0" # optional, default to '0'
+    input_position: "bottom" # optional, default to 'bottom'
+    lang: "es" # optional, default to the value of `site.lang`
+    reactions_enabled: "1" # optional, default to the value of `1`
 
 # Self-hosted static assets, optional › https://github.com/cotes2020/chirpy-static-assets
 assets:
@@ -151,6 +151,8 @@ paginate: 10
 
 # The base URL of your site
 baseurl: ""
+
+plugins: [jekyll-youtube]
 
 # ------------ The following options are not recommended to be modified ------------------
 
@@ -213,7 +215,7 @@ exclude:
   - README.md
   - LICENSE
   - purgecss.js
-  - "*.config.js"
+  - rollup.config.js
   - "package*.json"
 
 jekyll-archives:
