--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,40 +1,42 @@
 #  The contact options.
-
 - type: github
-  icon: "fab fa-github"
+  icon: 'fab fa-github'
+
+- type: bluesky
+  icon: 'fa-brands fa-bluesky'
+  url: 'https://bsky.app/profile/jorgelevy.net'
+
+- type: linkedin
+  icon: 'fab fa-linkedin'
+  url:  'https://www.linkedin.com/in/jorgelevydotnet'
+
+- type: facebook
+  icon: 'fab fa-facebook'
+  url:  'https://www.facebook.com/JorgeLevyDotNet'
+
+- type: youtube
+  icon: 'fab fa-youtube'
+  url: https://www.youtube.com/@JorgeLevyDotNet
 
 - type: twitter
   icon: "fa-brands fa-x-twitter"
 
-- type: email
-  icon: "fas fa-envelope"
-  noblank: true # open link in current tab
+- type: mastodon
+  icon: 'fab fa-mastodon'
+  url:  'https://hachyderm.io/@jorgelevy'  # Fill with your Mastodon account page, rel="me" will be applied for verification
+
+- type: threads
+  icon: 'fa-brands fa-threads'
+  url: 'https://www.threads.net/@jorgelevydotnet'                   # Fill with your Threads profile link
 
 - type: rss
-  icon: "fas fa-rss"
+  icon: 'fas fa-rss'
   noblank: true
-# Uncomment and complete the url below to enable more contact options
-#
-# - type: mastodon
-#   icon: 'fab fa-mastodon'   # icons powered by <https://fontawesome.com/>
-#   url:  ''                  # Fill with your Mastodon account page, rel="me" will be applied for verification
-#
-# - type: linkedin
-#   icon: 'fab fa-linkedin'   # icons powered by <https://fontawesome.com/>
-#   url:  ''                  # Fill with your Linkedin homepage
 #
 # - type: stack-overflow
 #   icon: 'fab fa-stack-overflow'
 #   url:  ''                  # Fill with your stackoverflow homepage
 #
-# - type: bluesky
-#   icon: 'fa-brands fa-bluesky'
-#   url: ''                   # Fill with your Bluesky profile link
-#
 # - type: reddit
 #   icon: 'fa-brands fa-reddit'
 #   url: ''                   # Fill with your Reddit profile link
-#
-# - type: threads
-#   icon: 'fa-brands fa-threads'
-#   url: ''                   # Fill with your Threads profile link
