--- a/_data/share.yml
+++ b/_data/share.yml
@@ -39,9 +39,9 @@ platforms:
     icon: "fa-brands fa-square-reddit"
     link: "https://www.reddit.com/submit?url=URL&title=TITLE"
 
-  - type: Twitter
+  - type: X
     icon: "fa-brands fa-square-x-twitter"
-    link: "https://twitter.com/intent/tweet?text=TITLE&url=URL"
+    link: "https://x.com/intent/tweet?text=TITLE&url=URL"
 
   - type: Threads
     icon: "fa-brands fa-square-threads"
